Make it responsive

--- a/templates/html/.partials/introduction.html
+++ b/templates/html/.partials/introduction.html
@@ -1,4 +1,4 @@
-<div class="w-3/5 p-8">
+<div class="center-block p-8">
   <a name="introduction"></a>
   <h1>{{asyncapi.info.title}} {{asyncapi.info.version}}</h1>
   <div class="leading-normal mb-4">
