--- a/templates/html/.partials/operation.html
+++ b/templates/html/.partials/operation.html
@@ -1,5 +1,5 @@
 <a name="operation-{{operationName}}-{{channelName}}"></a>
-<div class="w-3/5 p-8">
+<div class="center-block p-8">
   <div class="operation pt-8 pb-8">
     <h3 class="font-mono text-base">
       {{#if (equal operationName 'publish')}}
@@ -62,7 +62,7 @@
   </div>
 </div>
 
-<div class="w-2/5 my-8 p-8">
+<div class="right-block p-8">
   <h4 class="text-lg text-white mb-4">Examples</h4>
 
   <form>
