--- a/templates/html/.partials/servers.html
+++ b/templates/html/.partials/servers.html
@@ -1,6 +1,6 @@
 {{#if asyncapi.servers}}
 <a name="servers"></a>
-<div class="w-3/5 p-8">
+<div class="center-block p-8">
 
   <h2 class="mb-4">Servers</h2>
 
