--- a/templates/html/.partials/schema-prop.html
+++ b/templates/html/.partials/schema-prop.html
@@ -48,6 +48,18 @@
               <span class="bg-purple-dark font-bold no-underline text-white rounded lowercase ml-2"
                 style="height: 20px;font-size: 11px;padding: 3px;"><= {{prop.maxItems}} items</span>
             {{/unless}}
+            {{#unless (equal prop.maxLength undefined)}}
+              <span class="bg-purple-dark font-bold no-underline text-white rounded lowercase ml-2"
+                style="height: 20px;font-size: 11px;padding: 3px;">length <= {{prop.maxLength}}</span>
+            {{/unless}}
+            {{#unless (equal prop.minLength undefined)}}
+            <span class="bg-purple-dark font-bold no-underline text-white rounded lowercase ml-2"
+                  style="height: 20px;font-size: 11px;padding: 3px;">length >= {{prop.minLength}}</span>
+            {{/unless}}
+            {{#unless (equal prop.pattern undefined)}}
+            <span class="bg-purple-dark font-bold no-underline text-white rounded lowercase ml-2"
+                  style="height: 20px;font-size: 11px;padding: 3px;">must match {{prop.pattern}}</span>
+            {{/unless}}
             {{#if prop.uniqueItems}}
               <span class="bg-red-dark font-bold no-underline text-white rounded lowercase ml-2"
                 style="height: 20px;font-size: 11px;padding: 3px;" title="Array items must be unique">Unique</span>
