Added tag support to the sidebar as referenced in the following issue: https://github.com/asyncapi/generator/issues/69

--- a/templates/html/.partials/sidebar.html
+++ b/templates/html/.partials/sidebar.html
@@ -76,7 +76,9 @@
         </div>
       </div>
       {{/each}}
-      {{/if}}
+
+      {{else}}
+  
       <!--Without tags in sidebar-->
       {{#each asyncapi.channels}}
       <li>
@@ -114,6 +116,7 @@
       </li>
       {{/each}}
     </ul>
+    {{/if}}
     {{/if}}
   </div>
 </div>
