--- a/templates/html/.partials/sidebar.html
+++ b/templates/html/.partials/sidebar.html
@@ -58,6 +58,7 @@
           {{/if}}
           {{/if}}
           {{#if ./subscribe}}
+          {{#if (equal categorytags.name subscribe.tags.[0].name)}}
           <a class="js-menu-item flex break-words no-underline text-grey-darkest mt-8 sm:mt-8 md:mt-3" href="#operation-subscribe-{{@key}}">
             {{#if ./deprecated}}<span title="Deprecated"></span>{{/if}}
             <span class="bg-green-dark font-bold no-underline text-white uppercase p-1 mr-2 rounded" style="height: 21px;font-size: 11px;" title="Subscribe">Sub</span>
@@ -71,6 +72,7 @@
             </div>
             {{/if}}
           </a>
+          {{/if}}
           {{/if}}
           {{/each}}
         </div>
