Cheap fix to show operations which have no tags when using the param {'sidebarOrganization':'byTags'}

--- a/templates/html/.partials/sidebar.html
+++ b/templates/html/.partials/sidebar.html
@@ -78,9 +78,58 @@
         </div>
       </div>
       {{/each}}
+      <!-- Untagged operations -->
+      <div class="mt-4 {{#if open}}is-open{{/if}}">
+        <div class="js-prop cursor-pointer py-2 flex property">
+          <div class="pr-4" style="margin-top:-2px; min-width: 25%;">
+            <span class="text-sm" style="word-break: break-word;text-transform: capitalize;">Untagged</span>
+            <svg class="expand" version="1.1" viewBox="0 0 24 24" x="0" xmlns="http://www.w3.org/2000/svg" y="0">
+              <polygon points="17.3 8.3 12 13.6 6.7 8.3 5.3 9.7 12 16.4 18.7 9.7 "></polygon>
+            </svg>
+          </div>
+        </div>
+        <div class="children">
+          {{#each asyncapi.channels}}
+          {{#if ./publish}}
+          {{#unless publish.tags}}
+          <a class="js-menu-item flex break-words no-underline text-grey-darkest mt-8 sm:mt-8 md:mt-3" href="#operation-publish-{{@key}}">
+            {{#if ./deprecated}}<span title="Deprecated"></span>{{/if}}
+            <span class="bg-blue-dark font-bold h-6 no-underline text-white uppercase p-1 mr-2 rounded" style="height: 21px;font-size: 11px;" title="Publish">Pub</span>
+            {{#if ./publish.summary}}
+            <span style="padding-top: 2px;">
+              {{./publish.summary}}
+            </span>
+            {{else}}
+            <div style="display:inline-block;">
+              {{>slicedString string=@key style='padding-top: 2px;'}}
+            </div>
+            {{/if}}
+          </a>
+          {{/unless}}
+          {{/if}}
+          {{#if ./subscribe}}
+          {{#unless subscribe.tags}}
+          <a class="js-menu-item flex break-words no-underline text-grey-darkest mt-8 sm:mt-8 md:mt-3" href="#operation-subscribe-{{@key}}">
+            {{#if ./deprecated}}<span title="Deprecated"></span>{{/if}}
+            <span class="bg-green-dark font-bold no-underline text-white uppercase p-1 mr-2 rounded" style="height: 21px;font-size: 11px;" title="Subscribe">Sub</span>
+            {{#if ./subscribe.summary}}
+            <span style="padding-top: 2px;">
+              {{./subscribe.summary}}
+            </span>
+            {{else}}
+            <div style="display:inline-block;">
+              {{>slicedString string=@key style='padding-top: 2px;'}}
+            </div>
+            {{/if}}
+          </a>
+          {{/unless}}
+          {{/if}}
+          {{/each}}
+        </div>
+      </div>
 
       {{else}}
-  
+
       <!--Without tags in sidebar-->
       {{#each asyncapi.channels}}
       <li>
